--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ build_script:
   - sh: sudo ./build.sh
 
 after_build:
-  - sh: appveyor PushArtifact chroot.tar.gz -DeploymentName chroot
+  - sh: appveyor PushArtifact ramdisk/chroot.tar.xz -DeploymentName chroot
 
 test: off
 deploy:
